# ModTest

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
conf/: blacklist.json  metadata.json  metadata.py  settings.json
docs/src/: index.html  modtest.html
misc/: tree.txt
src/: modtest.py
